app/assets/stylesheets/static_pages.css.scss
body {
  padding-top: 70px;
  padding-left: 20px;
  padding-right: 20px;
}
.starter-template {
	padding-top: 20px;
 	text-align: center;
 	//float:left
}
.contact-info {
	margin-top: 20px;
	//float:right;
}

.projects {
	list-style-type: none;
}



.project {
	overflow: hidden;
	position: relative;
	list-style-type: none;
	padding: 10px 10px 10px 164px;

	.project-title {
		font-weight: bold;
	}
	.project-body {
		width: auto;
		
	}

	a, a:visited, a:active {
		.project-thumb {
			color: #000;
		}
	}

	.project-thumb {
		position: absolute;
		left: 10px;
		// float: left;
		width: 144px;
		height: 90px;
		img {
			//border-style: solid;
			//border-width: 2px;	
			max-width: 100%;
			//overflow: hidden;
			display: block;
		    margin-left: auto;
		    margin-right: auto;
		}
	}

	.project-source {
		margin-top: 20px;
	} 
}

